--- a/source/pages/index.astro
+++ b/source/pages/index.astro
@@ -1,18 +1,11 @@
 ---
-
+import Page from "@app/layouts/page.astro"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1 class="text-3xl font-bold underline">
-			Hello world!
-		</h1>	
-	</body>
-</html>
+<Page>
+
+  <Fragment slot="main">
+    <h1 class="font-bold underline">Hello World!</h1>
+  </Fragment>
+  
+</Page>
