chore: todo comment on user location component

--- a/source/common/components/user-location.astro
+++ b/source/common/components/user-location.astro
@@ -1,6 +1,8 @@
 ---
 import type { HTMLAttributes } from 'astro/types'
 type Props = HTMLAttributes<'span'>;
+
+// TODO: Serverless function to synchronize last info on each visit.
 ---
 
 <script>
