feat: satoshi variable font

--- a/source/pages/index.astro
+++ b/source/pages/index.astro
@@ -7,7 +7,7 @@ import UserLocation from "@common/components/user-location.astro"
 <Page>
 
   <Fragment slot="main">
-    <UserLocation />
+    <UserLocation class="text-3xl font-bold" />
   </Fragment>
   
 </Page>
