--- a/source/assets/styles/fonts.css
+++ b/source/assets/styles/fonts.css
@@ -7,3 +7,47 @@
   font-display: swap;
   font-style: normal;
 }
+
+@layer utilities {
+
+  .font-sans {
+    /** Enable ligatures by default */
+    font-feature-settings: "liga" on, "dlig" on;
+  }
+
+  .font-thin {
+    font-variation-settings: 'wght' 100;
+  }
+
+  .font-extralight {
+    font-variation-settings: 'wght' 200;
+  }
+
+  .font-light {
+    font-variation-settings: 'wght' 300;
+  }
+
+  .font-normal {
+    font-variation-settings: 'wght' 400;
+  }
+
+  .font-medium {
+    font-variation-settings: 'wght' 500;
+  }
+
+  .font-semibold {
+    font-variation-settings: 'wght' 600;
+  }
+
+  .font-bold {
+    font-variation-settings: 'wght' 700;
+  }
+
+  .font-extrabold {
+    font-variation-settings: 'wght' 800;
+  }
+
+  .font-black {
+    font-variation-settings: 'wght' 900;
+  }
+}
