refactor: user location default text

--- a/source/common/components/user-location.astro
+++ b/source/common/components/user-location.astro
@@ -17,4 +17,4 @@ type Props = HTMLAttributes<'span'>;
 
 </script>
 
-<span data-location-placeholder {...Astro.props}></span>
+<span data-location-placeholder {...Astro.props}>Fetching user location...</span>
