--- a/source/assets/styles/screens.css
+++ b/source/assets/styles/screens.css
@@ -1,5 +1,4 @@
 .debug-screens:before {
-
   background-color: #000;
   top: 0;
   box-shadow: 0 0 0 1px #fff;
@@ -9,49 +8,43 @@
   font-size: 12px;
   left: 0;
   line-height: 1;
-  padding: .3333333em .5em;
+  padding: 0.3333333em 0.5em;
   position: fixed;
-  z-index: 2147483647
+  z-index: 2147483647;
 }
 
 @media (min-width: 450px) {
-
   .debug-screens:before {
-    content: "screen: xs"
+    content: "screen: xs";
   }
 }
 
 @media (min-width: 640px) {
-
   .debug-screens:before {
-    content: "screen: sm"
+    content: "screen: sm";
   }
 }
 
 @media (min-width: 768px) {
-
   .debug-screens:before {
-    content: "screen: md"
+    content: "screen: md";
   }
 }
 
 @media (min-width: 1024px) {
-
   .debug-screens:before {
-    content: "screen: lg"
+    content: "screen: lg";
   }
 }
 
 @media (min-width: 1280px) {
-
   .debug-screens:before {
-    content: "screen: xl"
+    content: "screen: xl";
   }
 }
 
 @media (min-width: 1536px) {
-
   .debug-screens:before {
-    content: "screen: 2xl"
+    content: "screen: 2xl";
   }
 }
