--- a/source/common/layout/header.astro
+++ b/source/common/layout/header.astro
@@ -1,12 +1,14 @@
 ---
 import IconSun from "~icons/lucide/sun";
 ---
-<header class='fixed container px-8 w-full border-b border-border h-[64px] inset-x-0 mx-auto top-0 z-100 flex justify-between items-center'>
 
-  <span class="uppercase font-black text-xl">Ivan Porto</span>
+<header
+  class="z-100 container fixed inset-x-0 top-0 mx-auto flex h-[64px] w-full items-center justify-between border-b border-border px-8"
+>
+  <span class="text-xl font-black uppercase">Ivan Porto</span>
 
-  <nav class="flex justify-center flex-grow">
-    <ul class="flex items-center gap-4 uppercase font-medium">
+  <nav class="flex grow justify-center">
+    <ul class="flex items-center gap-4 font-medium uppercase">
       <li>About</li>
       <li>Experience</li>
       <li>Projects</li>
@@ -15,10 +17,8 @@ import IconSun from "~icons/lucide/sun";
     </ul>
   </nav>
 
-  <div class="flex justify-end items-center gap-6">
+  <div class="flex items-center justify-end gap-6">
     <span>ENG</span>
     <IconSun />
   </div>
-
 </header>
-
