--- a/source/common/layout/page.astro
+++ b/source/common/layout/page.astro
@@ -13,44 +13,37 @@ import TwitterIcon from "~icons/lucide/twitter";
 ---
 
 <script>
-
   import tippy from "tippy.js";
   tippy("[data-tippy-content]", {
-
     placement: "right",
     offset: [0, 16],
 
     animation: "scale",
     inertia: true,
-  })
-
+  });
 </script>
 
-<!DOCTYPE html>
-
-<html lang='en' class="dark">
-
+<html lang="en" class="dark">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta charset='utf-8'/>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <link rel='sitemap' href='/sitemap-index.xml' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg'/>
-
-    <slot name='head'/>
-
+    <slot name="head" />
   </head>
 
-  <body class='debug-screens relative bg-background font-sans text-foreground antialiased'>
-
+  <body
+    class="debug-screens relative bg-background font-sans text-foreground antialiased"
+  >
     <Header />
 
-
-    <aside  class="fixed inset-y-0 left-0 w-[64px] z-[50] justify-end flex-col flex items-center gap-4">
-
-      <ul class="w-full flex flex-col items-center gap-y-8">
-
+    <aside
+      class="fixed inset-y-0 left-0 z-50 flex w-[64px] flex-col items-center justify-end gap-4"
+    >
+      &gt;
+      <ul class="flex w-full flex-col items-center gap-y-8">
         <li>
           <button data-tippy-content="Terminal">
             <SquareTerminal width={28} height={28} />
@@ -58,42 +51,63 @@ import TwitterIcon from "~icons/lucide/twitter";
         </li>
       </ul>
 
-      <ul id="socials" class="w-full flex flex-col items-center gap-y-8">
+      <ul id="socials" class="flex w-full flex-col items-center gap-y-8">
         <li>
-          <a data-tippy-content="LinkedIn" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer" href="https://linkedin.com/in/ivan-porto-wigner">
+          <a
+            data-tippy-content="LinkedIn"
+            aria-label="LinkedIn"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://linkedin.com/in/ivan-porto-wigner"
+          >
             <LinkedInIcon width={28} height={28} />
           </a>
         </li>
         <li>
-          <a data-tippy-content="GitHub" aria-label="GitHub" target="_blank" rel="noopener noreferrer" href="https://github.com/iivvaannxx">
+          <a
+            data-tippy-content="GitHub"
+            aria-label="GitHub"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://github.com/iivvaannxx"
+          >
             <GithubIcon width={28} height={28} />
           </a>
         </li>
         <li>
-          <a data-tippy-content="Twitter" aria-label="Twitter" target="_blank" rel="noopener noreferrer" href="https://x.com/iivanportoo">
+          <a
+            data-tippy-content="Twitter"
+            aria-label="Twitter"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://x.com/iivanportoo"
+          >
             <TwitterIcon width={28} height={28} />
           </a>
         </li>
         <li>
-          <a data-tippy-content="Resume" aria-label="Resume" target="_blank" rel="noopener noreferrer" href="https://read.cv/ivanporto">
-            <FileBadgeIcon  width={28} height={28} />
+          <a
+            data-tippy-content="Resume"
+            aria-label="Resume"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://read.cv/ivanporto"
+          >
+            <FileBadgeIcon width={28} height={28} />
           </a>
         </li>
       </ul>
     </aside>
 
-    <main class='relative w-full'>
-      <slot name='main' />
+    <main class="relative w-full">
+      <slot name="main" />
     </main>
-  
+
     <slot />
-
   </body>
-
 </html>
 
 <style>
-
   :root {
     --header-height: 96px;
   }
@@ -104,7 +118,6 @@ import TwitterIcon from "~icons/lucide/twitter";
   }
 
   html {
-
     scroll-behavior: smooth;
     width: 100%;
     height: 100%;
@@ -114,7 +127,6 @@ import TwitterIcon from "~icons/lucide/twitter";
   }
 
   body {
-
     width: 100%;
 
     min-height: 100%;
@@ -123,7 +135,7 @@ import TwitterIcon from "~icons/lucide/twitter";
 
   #socials::before,
   #socials::after {
-    content: '';
+    content: "";
     position: relative;
 
     top: 0;
@@ -133,5 +145,4 @@ import TwitterIcon from "~icons/lucide/twitter";
     height: 4rem;
     background: white;
   }
-
 </style>
