--- a/source/components/user-location.astro
+++ b/source/components/user-location.astro
@@ -9,26 +9,11 @@ type Props = HTMLAttributes<"span">;
 <script>
   import tippy from "tippy.js";
 
-  /**
-   * Retrieves the user's location information.
-   * @returns An object containing the user's country, flag, and city.
-   */
-  async function getUserLocation() {
-    const response = await fetch("https://geolocation.microlink.io");
-    const { country, city } = await response.json();
+  const response = await fetch("https://geolocation.microlink.io");
+  const { country, city } = await response.json();
 
-    return {
-      country: country.name as string,
-      flag: country.flag as string,
-      city: city.name as string,
-    };
-  }
-
-  const { city, country, flag } = await getUserLocation();
-  const placeholder = document.querySelector(
-    "#location-placeholder",
-  ) as HTMLSpanElement;
-  placeholder.textContent = `Last visit from ${city}, ${country} ${flag}`;
+  const placeholder = document.querySelector("span#location-placeholder")!;
+  placeholder.textContent = `Last visit from ${city.name}, ${country.name} ${country.flag}`;
 
   // Sets the tooltip for the privacy notice.
   const template = document.getElementById("privacy-notice");
