refactor: renamed data folder to lib

--- a/source/components/social-link.astro
+++ b/source/components/social-link.astro
@@ -1,5 +1,5 @@
 ---
-import { type SocialData } from "@app/data/socials";
+import { type SocialData } from "@app/lib/socials";
 import type { HTMLAttributes } from "astro/types";
 
 export type Props = HTMLAttributes<"a"> & {
