--- a/source/components/social-sidelist.astro
+++ b/source/components/social-sidelist.astro
@@ -1,6 +1,6 @@
 ---
 import SocialLink from "@app/components/social-link.astro";
-import { socials } from "@app/data/socials";
+import { socials } from "@app/lib/socials";
 ---
 
 <script>
