feat: i18n routing and translations

--- a/source/layouts/base.astro
+++ b/source/layouts/base.astro
@@ -4,7 +4,7 @@ import "tippy.js/animations/scale.css";
 import "tippy.js/dist/tippy.css";
 ---
 
-<html lang="en" class="dark">
+<html lang={Astro.locals.locale} class="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
