--- a/source/ui/layouts/page.astro
+++ b/source/ui/layouts/page.astro
@@ -1,8 +1,8 @@
 ---
-import Base from "@app/layouts/base.astro";
-import Header from "@app/layouts/header.astro";
+import Base from "@app/ui/layouts/base.astro";
+import Header from "@app/ui/layouts/header.astro";
 
-import SocialsSidelist from "@app/components/social-sidelist.astro";
+import SocialsSidelist from "@app/ui/components/social-sidelist.astro";
 ---
 
 <Base>
