--- a/source/ui/components/user-location.astro
+++ b/source/ui/components/user-location.astro
@@ -10,10 +10,18 @@ const t = useTranslations(Astro.locals.locale);
 ---
 
 <script>
+  import { getCurrentLocale } from "@app/modules/i18n/lib/locales";
   import tippy from "tippy.js";
 
   const response = await fetch("https://geolocation.microlink.io");
   const { country, city } = await response.json();
+
+  const currentLocale = getCurrentLocale();
+  const translatedCountry = new Intl.DisplayNames([currentLocale], {
+    type: "region",
+  });
+
+  const countryName = translatedCountry.of(country.alpha2);
 
   const userLocation = document.querySelector("div#user-location")!;
   const helpButton = document.querySelector("button#location-privacy-tooltip")!;
@@ -21,7 +29,7 @@ const t = useTranslations(Astro.locals.locale);
 
   userLocation.classList.remove("hidden");
   userLocation.classList.add("flex", "animate-in", "duration-300", "fade-in");
-  placeholder.textContent = ` ${city.name}, ${country.name} ${country.flag}`;
+  placeholder.textContent = ` ${city.name}, ${countryName} ${country.flag}`;
 
   // Sets the tooltip for the privacy notice.
   const template = document.getElementById("privacy-notice");
