--- a/source/ui/components/user-location.astro
+++ b/source/ui/components/user-location.astro
@@ -6,12 +6,13 @@ import CircleHelp from "~icons/lucide/circle-help";
 
 // TODO: Serverless function to synchronize last info on each visit.
 type Props = HTMLAttributes<"span">;
-const t = useTranslations(Astro.locals.locale);
+const translations = useTranslations(Astro.locals.locale);
+const t = translations.userLocation;
 ---
 
 <script>
   import { getCurrentLocale } from "@app/modules/i18n/lib/locales";
-  import tippy from "tippy.js";
+import tippy from "tippy.js";
 
   const response = await fetch("https://geolocation.microlink.io");
   const { country, city } = await response.json();
@@ -51,24 +52,24 @@ const t = useTranslations(Astro.locals.locale);
   <button
     id="location-privacy-tooltip"
     aria-haspopup="true"
-    aria-label={t("userLocation.notice.title")}
+    aria-label={t.notice.title}
   >
     <CircleHelp aria-hidden="true" width={24} height={24} />
   </button>
 
   <p {...Astro.props}>
-    <span>{t("userLocation.lastVisit")}</span>
+    <span>{t.lastVisit}</span>
     <span id="location-placeholder"></span>
   </p>
 </div>
 
 <div id="privacy-notice" class="hidden" aria-hidden="true">
   <span class="block text-base font-bold">
-    {t("userLocation.notice.title")}
+    {t.notice.title}
   </span>
 
   <p class="whitespace-pre-line text-pretty text-sm font-medium">
-    {t("userLocation.notice.message")}
+    {t.notice.message}
   </p>
 </div>
 
