feat: nav links setup and localization

--- a/source/modules/sections/about.astro
+++ b/source/modules/sections/about.astro
@@ -7,7 +7,7 @@ const t = translations.sections.about;
 ---
 
 <section
-  id="hero"
+  id={t.id}
   class="relative flex size-full flex-col items-center justify-center"
 >
   <div
@@ -57,7 +57,7 @@ const t = translations.sections.about;
 </section>
 
 <style>
-  #hero {
+  section {
     height: 100vh;
     height: 100dvh;
   }
