--- a/source/ui/layouts/header.astro
+++ b/source/ui/layouts/header.astro
@@ -1,23 +1,16 @@
 ---
+import NavLinks from "@app/modules/navigation/components/nav-links.astro";
 import IconSun from "~icons/lucide/sun";
 ---
 
 <header
-  class="z-100 container fixed inset-x-0 top-0 mx-auto flex h-[64px] w-full items-center justify-between border-b border-border px-8"
+  class="container fixed inset-x-0 top-0 z-50 mx-auto flex h-[64px] w-full items-center justify-between border-b border-border px-8"
 >
-  <span class="text-xl font-black uppercase">Ivan Porto</span>
+  <span class="w-1/6 text-xl font-black uppercase">Ivan Porto</span>
 
-  <nav class="flex grow justify-center">
-    <ul class="flex items-center gap-4 font-medium uppercase">
-      <li>About</li>
-      <li>Experience</li>
-      <li>Projects</li>
-      <li>Skills</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
+  <NavLinks class="flex grow justify-center" />
 
-  <div class="flex items-center justify-end gap-6">
+  <div class="flex w-1/6 items-center justify-end gap-6">
     <span>ENG</span>
     <IconSun />
   </div>
