--- a/source/ui/layouts/base.astro
+++ b/source/ui/layouts/base.astro
@@ -22,9 +22,22 @@ import "tippy.js/dist/tippy.css";
   </body>
 </html>
 
-<style>
+<style is:global>
   :root {
     --header-height: 96px;
+
+    --scrollbar-color-track: transparent;
+    --scrollbar-color-thumb: theme("colors.muted.DEFAULT");
+    --scrollbar-color-thumb-active: theme("colors.muted.foreground");
+    --scrollbar-color-thumb-hover: color-mix(
+      in hsl,
+      var(--scrollbar-color-thumb),
+      var(--scrollbar-color-thumb-active) 50%
+    );
+
+    --scrollbar-width: thin;
+    --scrollbar-width-legacy: 8px;
+    --scrollbar-thumb-radius: theme("borderRadius.full");
   }
 
   * {
@@ -33,12 +46,12 @@ import "tippy.js/dist/tippy.css";
   }
 
   html {
-    scroll-behavior: smooth;
     width: 100%;
     height: 100%;
 
     /** If supported this will be applied. */
     height: 100dvh;
+    scrollbar-gutter: stable;
   }
 
   body {
@@ -46,5 +59,50 @@ import "tippy.js/dist/tippy.css";
 
     min-height: 100%;
     min-height: 100dvh;
+  }
+
+  @supports selector(::-webkit-scrollbar) {
+    ::-webkit-scrollbar {
+      width: var(--scrollbar-width-legacy);
+    }
+
+    ::-webkit-scrollbar-button {
+      display: none;
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: var(--scrollbar-color-track);
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: var(--scrollbar-color-thumb);
+
+      border-block: 2px solid transparent;
+      border-radius: var(--scrollbar-thumb-radius);
+      background-clip: content-box;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: var(--scrollbar-color-thumb-hover);
+
+      border-block: 2px solid transparent;
+      border-radius: var(--scrollbar-thumb-radius);
+      background-clip: content-box;
+    }
+
+    ::-webkit-scrollbar-thumb:active {
+      background-color: var(--scrollbar-color-thumb-active);
+
+      border-block: 2px solid transparent;
+      border-radius: var(--scrollbar-thumb-radius);
+      background-clip: content-box;
+    }
+  }
+
+  @supports not selector(::-webkit-scrollbar) {
+    html {
+      scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+      scrollbar-width: var(--scrollbar-width);
+    }
   }
 </style>
