--- a/source/modules/sections/about.astro
+++ b/source/modules/sections/about.astro
@@ -63,6 +63,10 @@ const t = translations.sections.about;
   }
 
   #hero-bg {
-    background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
+    background: radial-gradient(
+      125% 125% at 50% 10%,
+      #000 40%,
+      theme("colors.primary.DEFAULT") 100%
+    );
   }
 </style>
