--- a/source/ui/layouts/base.astro
+++ b/source/ui/layouts/base.astro
@@ -51,7 +51,9 @@ import "tippy.js/dist/tippy.css";
 
     /** If supported this will be applied. */
     height: 100dvh;
+
     scrollbar-gutter: stable;
+    scroll-behavior: smooth;
   }
 
   body {
