--- a/source/ui/layouts/page.astro
+++ b/source/ui/layouts/page.astro
@@ -10,7 +10,7 @@ import SocialsSidelist from "@app/ui/components/social-sidelist.astro";
     <Header />
 
     <aside
-      class="fixed inset-y-0 left-0 z-50 flex w-[64px] flex-col items-center justify-end gap-4"
+      class="fixed inset-y-0 left-0 z-50 hidden w-[64px] flex-col items-center justify-end gap-4 lg:flex"
     >
       <SocialsSidelist />
     </aside>
