--- a/source/ui/layouts/header.astro
+++ b/source/ui/layouts/header.astro
@@ -3,15 +3,17 @@ import NavLinks from "@app/modules/navigation/components/nav-links.astro";
 import IconSun from "~icons/lucide/sun";
 ---
 
-<header
-  class="container fixed inset-x-0 top-0 z-50 mx-auto flex h-[64px] w-full items-center justify-between border-b border-border px-8"
->
-  <span class="w-1/6 text-xl font-black uppercase">Ivan Porto</span>
+<header class="fixed inset-x-0 top-0 z-50 h-[64px] w-full bg-background px-8">
+  <div
+    class="container mx-auto flex size-full items-center justify-between border-b border-border"
+  >
+    <span class="w-1/6 text-xl font-black uppercase">Ivan Porto</span>
 
-  <NavLinks class="flex grow justify-center" />
+    <NavLinks class="flex grow justify-center" />
 
-  <div class="flex w-1/6 items-center justify-end gap-6">
-    <span>ENG</span>
-    <IconSun />
+    <div class="flex w-1/6 items-center justify-end gap-6">
+      <span>ENG</span>
+      <IconSun />
+    </div>
   </div>
 </header>
